Main slide done

--- a/src/app/slides/_slides/slide01.mdx
+++ b/src/app/slides/_slides/slide01.mdx
@@ -1,7 +1,15 @@
 import homepage from './images/homepage.png'
 import { MainSlide } from './slide-layouts.tsx'
 
-# What we learned rebuilding the largest Nordic electronic retail website in Next.js 14?
+<div className="text-lg md:text-5xl leading-normal md:leading-loose">
+# What we learned rebuilding the largest Nordic electronic retail website in Next.js 14 on Vercel?
+</div>
+<div className="text-white/50 self-end flex flex-col">
+  <div className="flex flex-1 justify-end text-right">
+  Tomas Jansson, <a onClick={(e) => {e.stopPropagation()}} href="https://www.twitter.com/TomasJansson">@TomasJansson</a>
+  </div>
+  <span>Principal Software Engineer, Elkjøp Nordic</span>
+</div>
 
 <div className="hidden group-[.practice]:block notes">
 This is what I will say
