--- a/src/app/slides/_slides/slide01.mdx
+++ b/src/app/slides/_slides/slide01.mdx
@@ -7,7 +7,7 @@ import { MainSlide } from './slide-layouts.tsx'
 </div>
 <div className="text-white/50 self-end flex flex-col">
   <div className="flex flex-1 justify-end text-right">
-  Tomas Jansson, <a onClick={(e) => {e.stopPropagation()}} href="https://www.twitter.com/TomasJansson">@TomasJansson</a>
+  <a onClick={(e) => {e.stopPropagation()}} href="https://www.twitter.com/TomasJansson">@TomasJansson</a>
   </div>
   <span>Principal Software Engineer, Elkjøp Nordic</span>
 </div>
