--- a/src/app/slides/_slides/intro.mdx
+++ b/src/app/slides/_slides/intro.mdx
@@ -1,6 +1,6 @@
 import { Notes } from '../_components/notes.tsx'
+import { MainSlide } from '../_components/slide-layouts.tsx'
 import homepage from './images/homepage.png'
-import { MainSlide } from './slide-layouts.tsx'
 
 <div className="text-lg md:text-5xl leading-normal md:leading-loose">
 # What we learned rebuilding the largest Nordic electronic retail website in Next.js 14 on Vercel?
