--- a/src/app/slides/_slides/me.mdx
+++ b/src/app/slides/_slides/me.mdx
@@ -1,8 +1,8 @@
 import Image from 'next/image';
 import { Notes } from '../_components/notes.tsx';
+import { Column, Columns } from '../_components/slide-layouts.tsx';
 import logo from './images/elkjop.png';
 import me from './images/me.png';
-import { Column, Columns } from "./slide-layouts";
 
 # Who is Tomas Jansson?
 <Columns columnCount={2}>
