--- a/src/app/slides/_slides/what-did-we-learn.mdx
+++ b/src/app/slides/_slides/what-did-we-learn.mdx
@@ -1,5 +1,5 @@
 import { Notes } from '../_components/notes.tsx'
-import { MainSlide } from './slide-layouts.tsx'
+import { MainSlide } from '../_components/slide-layouts.tsx'
 
 # What did we learn?
 
