--- a/src/app/slides/_slides/how-do-you-start.mdx
+++ b/src/app/slides/_slides/how-do-you-start.mdx
@@ -1,5 +1,5 @@
 import { Notes } from '../_components/notes.tsx'
-import { MainSlide } from './slide-layouts.tsx'
+import { MainSlide } from '../_components/slide-layouts.tsx'
 
 # How do you get to do such a rewrite in the first place?
 
