--- a/src/app/slides/_slides/spectrum-of-applications.mdx
+++ b/src/app/slides/_slides/spectrum-of-applications.mdx
@@ -11,7 +11,7 @@ import Spectrum from './images/spectrum.png';
   </Column>
 
   <Column className="flex flex-row justify-center items-center">
-    <Image src={Spectrum} />
+    <Image src={Spectrum} alt="Spectrum" />
   </Column>
 </TwoColumns>
 
