--- a/src/app/slides/_slides/internationalization.mdx
+++ b/src/app/slides/_slides/internationalization.mdx
@@ -1,7 +1,20 @@
+import Image from 'next/image'
 import { Notes } from '../_components/notes.tsx'
-import { MainSlide } from '../_components/slide-layouts.tsx'
+import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
+import globe from './images/globe.png'
 
-# Internationalization
+
+<TwoColumns>
+  <Column className="flex flex-col justify-center items-center gap-4">
+  
+    # Internationalization
+
+  </Column>
+
+  <Column className="flex flex-row justify-center items-center bg-white">
+    <Image src={globe} alt="Globe"/>
+  </Column>
+</TwoColumns>
 
 <Notes>
 When we started out with using app router there was no framework or nothing available for us when it comes to internationalization, so we had to implement our own solution for it. In addition, most i18n solutions is not a perfect fit for what we needed. We really didn't have a i18n problem, it was more a "market" problem where our application should support multiple markets and all markets had different languages. So we couldn't use routing based translations and needed something else. This is where we started to use one of the most powerful features in nextjs as I see it, the middleware. I still have things I wish around the middleware, but that it is available is a life saver. When running on vercel the middleware is also running on the edge, which makes it very good for things like authentication, figuring out locale, checking cookies and other things. One thing I think you should avoid is making request to other services here, of course there are exceptions if it happens rarely like cookie refresh, but ideally you want to make the middleware as fast as possible and just doing things with cookies and headers is often very fast since all that is in memory.
