--- a/src/app/slides/_slides/edge-and-back.mdx
+++ b/src/app/slides/_slides/edge-and-back.mdx
@@ -1,15 +1,25 @@
+import Image from 'next/image'
 import { Notes } from '../_components/notes.tsx'
-import { MainSlide } from '../_components/slide-layouts.tsx'
+import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
+import edge from './images/edge.webp'
 
-# To the edge and back
+
+<TwoColumns>
+  <Column className="flex flex-col justify-center items-center gap-4">
+  
+    # To the edge and back
+
+  </Column>
+
+  <Column className="flex flex-row justify-center items-center">
+    <Image src={edge} alt="Edge"/>
+  </Column>
+</TwoColumns>
+
 
 <Notes>
 When started using nextjs and vercel there were quite a significant push to run things more on edge, and we went with it. Most of the time it worked really well, but we did see some unexpected latencies from time to time which was quite annoying, but they all made sense when we started to think about it. When running things on the edge basically all our requests to the underlying API needs to travel further and that could cause unexpected latencies. Moving the computation to serverless which will run closer to the underlying APIs will make things more reliable when it comes to latencies. Does this mean you should never user edge? Definitely not. If you have the data co-located with your edge nodes you can definitely run on edge, or if you maybe have only a few API calls. I can't tell you what to do, but be sure to test your assumptions.
 
-</Notes>
+The final switch to almost 100% static pages happened a couple of hours before we went 100% live, and it was a great decision. Performance was great and we could easily handle the load that came... since we also decided to run a campaign at the same time.
 
-export default ({children}) => {
-  return <MainSlide>
-    {children}
-  </MainSlide>
-}
+</Notes>
