Server actions demo

--- a/src/app/slides/_slides/caching.mdx
+++ b/src/app/slides/_slides/caching.mdx
@@ -10,7 +10,7 @@ import caching from './images/caching.webp'
     # Caching
 
     <div className="flex flex-row gap-2 mt-8 w-full justify-center">
-      <Link onClick={(e) => e.stopPropagation()} href="/demo/cache/1">
+      <Link onClick={(e) => e.stopPropagation()} href="/demos/cache/1">
         Cache demo
       </Link>
     </div>
