--- a/src/app/slides/_slides/closing.mdx
+++ b/src/app/slides/_slides/closing.mdx
@@ -1,14 +1,25 @@
 import { Notes } from '../_components/notes.tsx'
 import { MainSlide } from '../_components/slide-layouts.tsx'
+import homepage from './images/homepage.png'
 
-# Closing notes
+<div className="text-lg md:text-5xl leading-normal md:leading-loose container self-end text-right justify-self-end">
+
+  # Thank you!
+
+  <div className="text-white/50 self-end flex flex-col text-lg items-end">
+    <div className="flex flex-1">
+    <a onClick={(e) => {e.stopPropagation()}} href="https://www.twitter.com/TomasJansson">@TomasJansson</a>
+    </div>
+    <span>Principal Software Engineer, Elkjøp Nordic</span>
+  </div>
+</div>
 
 <Notes>
-TBD
+  With that I would like to thank you all for coming and spent some time with me. I do think there is time for a couple of questions if there are any? I can also stay around for a couple of minutes after the session and will be here for the rest of the conference. Feel free to reach out here or on twitter, linkedin or whatever platform you prefer and manage to find me on.
 </Notes>
 
 export default ({children}) => {
-  return <MainSlide>
+  return <MainSlide imgUrl={homepage}>
     {children}
   </MainSlide>
 }
