intro slide done

--- a/src/app/slides/_slides/intro.mdx
+++ b/src/app/slides/_slides/intro.mdx
@@ -14,7 +14,11 @@ import homepage from './images/homepage.png'
 </div>
 
 <Notes>
-Hello everyone! I guess a lot of you in the audience, at least you from the Nordics, has used Elkjøp, elgiganten or gigantti and most likely been frustrated at some point. How has the experience been?
+
+Hello everyone! Welcome to this session where I will talk about what we have learned rebuilding our e-commerce site in Next.js 14 on Vercel. 
+
+I will go through both some backround and why we did it in the first place, and also the technical aspect of it of course. There are two parts to this talk, one is how to drive change in larger organizations and the second part is the technical aspect of the changes we made. This has probably been one of the most fun project throughout my career and I really hope that you will learn something from it.
+
 </Notes>
 
 export default ({children}) => {
