--- a/src/app/slides/_slides/me.mdx
+++ b/src/app/slides/_slides/me.mdx
@@ -30,5 +30,14 @@ import me from './images/me.png';
 </Columns>
 
 <Notes>
-Before moving on a quick introduction is in order. I'm a principal software engineer at Elkjøp Nordic, which is the largest electronic retailer in the Nordics. I have previously worked as consultant for 10+ years and also some years at a startup. I realize I am getting older since I've been doing this professionally for close to 20 years now, which is fun and scary at the same time. My first paid job was Perl and from there I've been through ABAP, Java, C#, F#, golang and of course js and typesecript. The work has included that is referred to when talking about fullstack. I often don't focus too much of where in the stack I am, instead I try to look at it from the perspective of where I believe I can make a significant impact... and right now it is in rebuilding our site at Elkjøp which has been super fun so far!
+Before moving on a quick introduction is in order. I'm a principal software engineer at Elkjøp Nordic, which is the largest electronic retailer in the Nordics by far. We have our Nordic brands, Elkjøp in Norway, Elgiganten in Sweden and Denmark and Gigantti in Finland. We employ more than 10000 people in the company as a whole, so we are a fairly larger retailer I would say.
+
+In my current role at Elkjøp I get to work on all kinds of things, but right now I'm focusing on rebuilding our site.
+
+I have previously worked as consultant for 10+ years and also some years at a startup, but I working at Elkjøp now is something that really fits what I want.
+
+I do realize I am getting older since I've been programming for food for close to 20 years now, which is fun and scary at the same time. My first paid job in the field was Perl and from there I've been through ABAP on SAP, Java, C#, F#, golang and of course js and typesecript.
+
+I really don't care too much about if I work with infrastructure, backend or frontend, instead I focus on where I believe I can make a significant impact... and right now that is in rebuilding our site at Elkjøp which has been super fun so far! 
+
 </Notes>
