Dont sell tech done

--- a/src/app/slides/_slides/dont-sell-tech.mdx
+++ b/src/app/slides/_slides/dont-sell-tech.mdx
@@ -19,5 +19,7 @@ import SellTheProblem from './images/sell-the-problem.webp';
 </TwoColumns>
 
 <Notes>
-First point is what I call "sell the problem". Often as developer we tend to focus on the tech much more than the problem we are going to solve. Focusing on the problem and why it is a problem is definitely more effective to get an approval from management. 
+First point is what I call "sell the problem". Often as developer we tend to focus on the tech much more than the problem we are going to solve. Why wouldn't we? We know much more about the technical side of things most of the time, so it definitely make sense.
+
+I do however think that it is crucial in some scenarios to focus on the problem you want to solve and not the tech to be heard. Management and shareholders does not really care too much about tech to be honest, they want happy customers, more revenue and lower cost... very simplified. So if we can present a problem that addresses one of these things, we are much more likely to be heard. 
 </Notes>
