--- a/src/app/slides/_slides/how-do-you-start.mdx
+++ b/src/app/slides/_slides/how-do-you-start.mdx
@@ -4,7 +4,14 @@ import { MainSlide } from '../_components/slide-layouts.tsx'
 # How do you get to do such a rewrite in the first place?
 
 <Notes>
-From previous experiences I do know that it can some times be hard for developers to really drive the change they want to make. A lot of the times those decisions are made by what people often call business, which is like saying IT is not business. This is more true in larger organizations than startups so I thought I would share a couple of words on how I think you need to approach this go actually drive change in a large organization.
+
+
+From previous experiences I do know that it can some times be hard for developers to really drive the change they want to make. I know we sit on a lot of solutions that really make sense, but we often fail to communicate our ideas so they get heard and instead some other decision from "the business" gets priority.
+
+I do think this is more common in more traditional organizations and organizations that are not delivering tech in one way or another. That is understandable, I mean, take Elkjøp for example. We are a retailer first and live by selling consumer goods to our customers, not by delivering tech. It is a big difference, but at the same time tech is becoming more and more important and it is turning to key differentiator for us in my opinion.
+
+So let's look at how you might be able to drive change where you work. I will not say that this is the only way to do it, but it is a way that I have found to work for me.
+
 </Notes>
 
 export default ({children}) => {
