Do the math done

--- a/src/app/slides/_slides/do-the-math.mdx
+++ b/src/app/slides/_slides/do-the-math.mdx
@@ -17,7 +17,7 @@ import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
 
 
 <Notes>
-The main reason I think "the business" is driving most change initiatives is because they are focusing on the numbers. They make esimates on how revenue might change and also how we can lower costs. We need to speak the same language to be heard, so do the math around how cost might change or potential revenue. In our case we focused mainly on the cost.
+Now when we have estbalished that we need to focus on the problem and not the tech, we need to do the math. The main reason I think "the business" is driving most change initiatives is because they are focusing on the numbers. They make esimates on how revenue might change and also how we can lower costs. We need to speak the same language to be heard, so do the math around how cost might change or potential revenue. In our case we focused mainly on the cost. The numbers should be realistic and not just some made up numbers, so make sure you have some data to back it up. Of course, some parts will be assumptions since you can't be 100% sure how things will turn out, so if you also can present a plan on how to validate these assumptions you are even better off.
 </Notes>
 
 export default ({children}) => {
