--- a/src/app/slides/_slides/pair-up.mdx
+++ b/src/app/slides/_slides/pair-up.mdx
@@ -16,5 +16,5 @@ import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
 
 
 <Notes>
-Since the above might not be the area of expertise that you specialize in, pairing up with someone might be a good idea. Preferably someone that complements you and also can help challenge what you want to do to check if it even make sense.
+Since the above might not be the area of expertise that you specialize in, pairing up with one or more people might be a good idea. Preferably someone that complements you and also can help challenge what you want to do to check if it even make sense. In my specific scenario I got help from three people I would say. Two other developers so we could make a really rough proof of concept and one more person to help create a solid business case. This was crucial for me to be able to drive the change I wanted to make.
 </Notes>
