--- a/src/app/slides/_slides/tell-and-show.mdx
+++ b/src/app/slides/_slides/tell-and-show.mdx
@@ -18,5 +18,9 @@ import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
 
 
 <Notes>
-Make a presentation that you can point to and present. Also, if you can make a quick PoC of some part of what will happen will also make it easier to pitch what you want to do. In our case we had the complete base already finished, but that is only a small part of the job in total.
+
+When you have a couple of people on board, it is time to tell AND show what you want to do. Create a presentation that you can point to. In the presentation be clear what problem it is you want to solve, how you will do it and what the potential outcome might be. If you can I really recommend to show some kind of early proof of concept to really show that it can be done.
+
+In the presentation include a plan on how you want to achieve what you want to do. This will make it easier for people to understand what you want to do and also make it easier for them to help you. In our case, all we asked for was actually a first couple of months to create a more solid proof of concept and postpone the actual decision until we had more data to back up our assumptions. This way of working was very new for Elkjøp, but they were willing to give it a try since the cost was relatively low compared to the potential outcome.
+
 </Notes>
