--- a/src/app/slides/_slides/timing-is-bad.mdx
+++ b/src/app/slides/_slides/timing-is-bad.mdx
@@ -15,5 +15,9 @@ import { Column, MainSlide, TwoColumns } from '../_components/slide-layouts.tsx'
 </TwoColumns>
 
 <Notes>
-Some will argue that timing is bad, and it is hard to argue against, but the fact is that timing will always be bad. Since we don't have the luxury of traveling back in time and maybe make the decision when the previous decision was made, the second best option is most likely now... especially if you have a good business case.
+
+Be prepared that you will get the argument that timing is bad. In most cases I agree 100%, the problem is that timing will always be bad. Most of the time the time when this would have been right was yesterday, and unfortunately we can't travel back in time. So the second best option is most likely now. If you have a good business case, it is most likely worth a shot.
+
+This concludes the five steps I took to drive change in Elkjøp. So let's switch gears and talk about the technical side of things.
+
 </Notes>
