--- a/src/app/slides/_slides/spectrum-of-applications.mdx
+++ b/src/app/slides/_slides/spectrum-of-applications.mdx
@@ -17,11 +17,13 @@ import Spectrum from './images/spectrum.png';
 
 
 <Notes>
-Let's change pace and focus on the technical part. The way I pictuer web application is on some kind of spectrum ranging from fully static pages to fully dynamic applications. To make a half decent decision it might be good to know where you are on this spectrum. On one end we have static blogs that can be just plain html and on the other we could have things like real time applications. An ecommerce site is really more towards the static end of the spectrum overall with some dynamic parts. The previous site was build using angular which is really targetting dynamic applications you will always fight the framework. I'm not sure I would use angular in that end either but that is a completely different discussion... Nextjs on the other hand is first quite broad, but you can quite easily use it to generate static content where needed and then sprinkle dynamic content on top.
 
-The proposal we had was to move to nextjs and leverage server side rendering much more, but still had a very decent foundation to create dynamic parts where needed. From a pure performance perspective there could be smarter choices, but we have to take both the existing pool of developers and potential future pool of development. Pushing for newer and more experimental things require that a significant pool of developers wants to work with said technology. At the moment we don't have a pool of developers that want to work with Svelte, htmx, clojurescript or fable... so the logical choice is to pick something that is safe, and in the current web landscape I don't think there is anything safer than React to be honest.
+The way I picture web application is on some kind of spectrum ranging from fully static pages to fully dynamic applications. To make a half decent decision it might be good to know where you are on this spectrum. On one end we have static blogs that can be just plain html and on the other we could have things like real time applications. An ecommerce site is really more towards the static end of the spectrum overall with some dynamic parts. The previous site was build using angular which is targetting dynamic applications you will always fight the framework as I see it. I'm not sure I would use angular in that end either but that is a completely different discussion... Nextjs on the other hand is first quite broad, but you can quite easily use it to generate static content where needed and then sprinkle dynamic content on top, and that has become even more true with the app router in nextjs 13.
 
-Nextjs is just a very opinionated way of writing react, which helps solve a lot of problems around building and deploying the application out of the box.
+The proposal we had was to move to nextjs and leverage server side rendering much more, but still had a very decent foundation to create dynamic parts where needed. Doing more things on the server would solve a lot of our performance and stability problems.
 
-React is a safe bet. 
+From a pure performance perspective there could be smarter choices than nextjs, but we have to take both the existing pool of developers and potential future pool of development. Pushing for newer and more experimental things require that a significant pool of developers wants to work with said technology. At the moment we don't have a pool of developers that want to work with Svelte, htmx, clojurescript or fable... so the logical choice is to pick something that is safe, and in the current web landscape I don't think there is anything safer than React to be honest. 
+
+Nextjs is just a very opinionated way of writing react, which helps solve a lot of problems around building and deploying the application out of the box. So choosing nextjs was a very safe choice in my opinion.
+
 </Notes>
