--- a/src/app/slides/_slides/why-next.mdx
+++ b/src/app/slides/_slides/why-next.mdx
@@ -1,10 +1,14 @@
 import { Notes } from '../_components/notes.tsx'
 import { MainSlide } from '../_components/slide-layouts.tsx'
 
+<MainSlide>
+
 # Why Next.js?
 
-export default ({children}) => {
-  return <MainSlide>
-    {children}
-  </MainSlide>
-}
+</MainSlide>
+
+<Notes>
+
+Let's start with why you might want to choose next.js for your site?
+
+</Notes>
