What did we learn done

--- a/src/app/slides/_slides/what-did-we-learn.mdx
+++ b/src/app/slides/_slides/what-did-we-learn.mdx
@@ -4,7 +4,9 @@ import { MainSlide } from '../_components/slide-layouts.tsx'
 # What did we learn?
 
 <Notes>
-Next.js is a opinionated way of writing applications, you can't accept those opinions you are better off with using something else. Of course there are things I might not like 100%, but I understand why it is like so and accept it since I consider the upside of not having to reinvent everything myself much bigger than figuring out all the things that I get from nextjs by myself. I want to focus as much as possible on delivering vavlue to our customers and if I can "buy" myself some slack by using something existing I am 100% fine with that.
+
+Given that next.js is a very opinionated way of writing applications, I would say that you have to either accept those opinions or you might be better of using something else. There are a lot of other great options out there, so don't be stuck in something you don't enjoy working with. There are of course things I don't agree 100% with, but I understand why it is like so and accept it since I consider the upside of not having to reinvent everything myself much bigger than figuring out all the things that I get from nextjs by myself. I want to focus as much as possible on delivering vavlue to our customers and if I can "buy" myself some slack by using something existing I am 100% fine with that.
+
 </Notes>
 
 export default ({children}) => {
